<resources>
    <string name="app_name">Shopee</string>
    <string name="todo">TODO</string>
    <string name="rp2_719">Rp2.719</string>
    <string name="isi_saldo">Isi Saldo</string>
    <string name="_2_600">2.600</string>
    <string name="koin_saya">Koin saya</string>
    <string name="transfer">Transfer</string>
    <string name="gratis">Gratis</string>
    <string name="gratis_ongkir_dan_voucher">Gratis ongkir dan Voucher</string>
    <string name="pulsa_tagihan_dan_tiket">Pulsa, Tagihan, dan Tiket</string>
    <string name="shopee_mall">Shopee Mall</string>
    <string name="shopeepay_sekitarmu">ShopeePay Sekitarmu</string>
    <string name="shopee_barokah">Shopee Barokah</string>
    <string name="shopee_games">Shopee Games</string>
    <string name="shopeefood">ShopeeFood</string>
    <string name="shopee_pilih_lokal">Shopee Pilih Lokal</string>
    <string name="spaylater">SPayLater</string>
    <string name="lihat_semua">Lihat Semua</string>
</resources>